# chat-app-prjt-2025-01-micsvc

./: .gitignore  Readme.md  pyproject.toml
server-websocket/: Readme.md
server-websocket/src/: go.mod
